# Wanalizer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  run.sh  setup.py
tests/: test_ai_classification_strategy.py  test_ai_first_rename.py  test_analyzer_rename.py  test_combined_classifier.py  test_perceptual_dedupe.py  test_reorder_ai_rename.py  test_reorder_simplified.py  test_smoke.py
wallpaper_analyzer/: __init__.py  categories.py  category_config.py  classify.py  clean_tags.py  cli.py  clip_client.py  color.py  duplicates.py  formats.py  hashing.py  minimal_ai.py  ollama_client.py  organize.py  parallel.py  profile.py  prompt_generator.py  quality.py  rename.py  settings.py  tag_policies.py  tag_suggester.py  tags.py
wallpaper_analyzer/analyzers/: __init__.py  base.py  fusion_mode.py  lowlevel_mode.py
wallpaper_analyzer/data/: tags.json
wallpaper_analyzer/gui/: __init__.py  __main__.py  ai_rename_dialog.py  category_config_dialog.py  rename_dialog.py  theme.py  widgets.py  workers.py
wallpaper_analyzer/gui/pages/: __init__.py  ai_models.py  categories.py  dashboard.py  dependencies.py  duplicates.py  organize.py  reorganize.py  settings.py  tags.py
wallpaper_analyzer/lowlevel/: __init__.py  category_profile.py  color_advanced.py  composition.py  contours.py  edges.py  features.py  fourier.py  hog.py  pattern.py  quality_advanced.py  silhouettes.py  subject.py  symmetry_advanced.py  texture.py
wallpaper_analyzer/tools/: regenerate_categories.py
