[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wanalyzer"
version = "3.0.0"
description = "Wanalizer - Intelligent wallpaper organizer with 4 analysis modes: Low-Level CV, CLIP, CLIP+LowLevel fusion, and Ollama vision LLMs."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Wanalizer Contributors"},
]
keywords = ["wallpaper", "organizer", "computer-vision", "clip", "ollama", "image-classification", "wanalyzer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "Pillow>=9.0.0",
    "numpy>=1.24.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
gui = ["PySide6>=6.6.0"]
cv = ["opencv-python-headless>=4.8.0", "imagehash>=4.3.0", "scikit-learn>=1.3.0"]
clip = ["torch>=2.0.0", "torchvision>=0.15.0", "clip @ git+https://github.com/openai/CLIP.git"]
all = ["PySide6>=6.6.0", "opencv-python-headless>=4.8.0", "imagehash>=4.3.0", "scikit-learn>=1.3.0"]

[project.scripts]
wanalyzer = "wallpaper_analyzer.cli:main"
wanalyzer-gui = "wallpaper_analyzer.gui:main"

[project.urls]
"Source" = "https://github.com/leo/Wanalizer"
"Issues" = "https://github.com/leo/Wanalizer/issues"

[tool.setuptools.packages.find]
include = ["wallpaper_analyzer*"]